# reaction

./: .gitignore  README.md  krdf.hs  reaction.cabal
Flow/: Kappa.lhs  Reaction.lhs
Flow/Internal/: KappaAST.lhs  KappaParser.lhs  KappaQuotes.lhs  KappaUtil.lhs  ReactionQuotes.lhs
Flow/Kappa/: Rdf.lhs  Vocabulary.lhs
Test/: KappaT.lhs  ReactionT.lhs  Semantic.hs  semantic.sh
doc/: .gitignore  Makefile  literate.sty  reaction.tex
examples/: binding.sparql  contact.py  contact.sparql  contact_redland.py  owl-rules.n3  rbmo.ttl  rdfs-rules.n3  tcs.bgnl  tcs.kappa
