name:                flow-reaction

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Data structures for chemical reactions

-- A longer description of the package.
-- description:         

-- URL for the project homepage or repository.
homepage:            http://tardis.ed.ac.uk/~wwaites/reaction/
license:             GPL-3
license-file:        LICENSE
author:              William Waites
maintainer:          wwaites@tardis.ed.ac.uk
category:            Math
build-type:          Simple
cabal-version:       >=1.16
library
  ghc-options: -Wall -XQuasiQuotes -XParallelListComp
  -- Modules exported by the library.
  exposed-modules:     
    Flow.Kappa
    Flow.Reaction
  other-modules:       
    Flow.Internal.KappaAST
    Flow.Internal.KappaParser
    Flow.Internal.KappaQuotes
    Flow.Internal.ReactionQuotes

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.6,
                       attoparsec,
                       containers,
                       multiset,
                       template-haskell,
                       text,
                       unordered-containers
  default-language:    Haskell2010

test-suite tests
  ghc-options: -Wall
  default-extensions:  OverloadedStrings
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  build-depends:       base >=4.6,
                       HUnit,
                       attoparsec,
                       containers,
                       multiset,
                       template-haskell,
                       text,
                       unordered-containers
  default-language:    Haskell2010

-- Local Variables:
-- compile-command: "cabal build && cabal test"
-- End:
